# desktop-agent

./: .gitignore  README.md  README_STREAMING.md  pyproject.toml  quick_test.py  test.py  test_streaming.py
.cursor/rules/: about-project.mdc
api/: __init__.py
cli/: __init__.py  main.py
config/: prompts copy.toml  prompts.toml  system.yaml
config/chat_templates/: chatml.yaml  openai.yaml  qwen3.yaml
core/: __init__.py  code_executor.py  config.py  simple_mcp_executor.py  tool_executor.py
core/agent/: __init__.py
core/llm/: __init__.py  base.py  chat_template.py  continuation.py  manager.py  ollama_engine.py  vllm_engine.py
core/mcp/: __init__.py  client.py  config.py  integration.py  manager.py  security.py
core/tools/: __init__.py
docs/: CHAT_TEMPLATE_GUIDE.md  mcp_usage.md
examples/: chat_template_usage_example.py  mcp_example.py
tests/: test_basic.py  test_mcp.py
